# open-synthesis

./: .gitignore  DATA_SOURCES.md  LICENSE  PRD_DETERMINISM.md  README.md  REFERENCES.md  WHITEPAPER.md  model_card.md  pyproject.toml  runpod_deployment.md
.github/workflows/: build-handler.yml
case_studies/: heritability_of_intelligence.md  psychedelic_therapy.md  race_cognitive_differences.md  sex_differences_cognition.md
config/: default.toml
docker/: .dockerignore  Dockerfile  build.sh  requirements.txt
docs/: CNAME  case-study-heritability.html  case-study-psychedelic-therapy.html  case-study-race-cognition.html  case-study-sex-differences.html  index.html  research.html  style.css
prompts/: citation_check.txt  hallucination_check.txt  outline.txt  query_decomposition.txt  section_queries.txt  section_synthesis.txt  synthesis.txt  uncertainty.txt
src/open_synthesis/: __init__.py  cli.py  config.py  handler.py  server.py  types.py
src/open_synthesis/corpus/: base.py  chunker.py  manager.py  store.py
src/open_synthesis/corpus/sources/: __init__.py  arxiv.py  biorxiv.py  cdc.py  census.py  chembl.py  clinicaltrials.py  core_api.py  crossref.py  datagov.py  europe_pmc.py  eurostat.py  fred.py  gbif.py  gwas_catalog.py  (+17 more)
src/open_synthesis/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
src/open_synthesis/synthesis/: client.py  paper.py  pipeline.py  prompts.py
src/open_synthesis/validation/: citation.py  hallucination.py  uncertainty.py
tests/: conftest.py  test_chunker.py  test_config.py  test_retrieval.py  test_server.py  test_validation.py
